--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <div align="center">
             <p>会員管理システム</p>
             <a href="./list.php">会員一覧</a><br />
-            <a href="./register.php">会員登録</a>
+            <a href="./input.php">会員登録</a>
         </div>
     </body>
 </html>
